# projeto_MusicaLetras

./: .gitignore  application.py  pyproject.toml
tests/: test.ipynb
